[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automod = "1.0.13"
clap = { version = "4.4.11", features = ["derive"] }
dotenvy = "0.15.7"
miette = { version = "5.10.0", features = ["fancy"] }
regex = "1.10.2"
ureq = "2.9.1"
